#
# Example setup.cfg if you want to use it as a template or reference
#

# You should use versioneer if you use git based source control
# [versioneer]
# VCS = git
# style = pep440
# versionfile_source = yourproject/_version.py
# versionfile_build = yourproject/_version.py
# tag_prefix = ''
# If you use a namespace within a company, to avoid internal/external
# package naming collision
#
# Example: exxon.infra.
# parentdir_prefix = company.group.

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[pycodestyle]
# select =
ignore = E501,W605

[flake8]
max-line-length = 140

[clean]
all = 1

[metadata]
requires-python = >=3


